# inspector

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/inspector/: chrono.hpp  containers.hpp  core.hpp  inspector.hpp  optional.hpp  utility.hpp
test/: CMakeLists.txt
test/source/: chrono_test.cpp  containers_test.cpp  core_test.cpp  inspector_test.cpp  optional_test.cpp  utility_test.cpp
